--- a/RedSports/src/app/perfil/perfil.page.html
+++ b/RedSports/src/app/perfil/perfil.page.html
@@ -28,7 +28,7 @@
     <ion-label class="labelSeguidores">
         Usuario: 
     </ion-label>
-   <span class="valoresSuperiores">{{ usuarioPerfil.nombre }}</span>
+   <span class="valoresSuperiores">{{ usuarioPerfil.nick }}</span>
     <br>
     <ion-label class="labelSeguidores">
         Seguidores:
