--- a/RedSports/src/app/perfil/perfil.page.html
+++ b/RedSports/src/app/perfil/perfil.page.html
@@ -41,54 +41,17 @@
     </p>
   </ion-item>
   <ion-list>
-    <ion-card>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="http://autokadabra.ru/system/uploads/users/18/18340/small.png?1318432918">
-        </ion-avatar>
-        <h2>Marty McFly</h2>
-        <p>November 5, 1955</p>
-      </ion-item>
-    
-      <img src="https://concepto.de/wp-content/uploads/2015/03/paisaje-2-e1549600987975.jpg">
-    
-      <ion-card-content>
-        <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
-      </ion-card-content>
-    
-      <ion-row>
-        <ion-col>
-          <button ion-button icon-start clear small>
-            <ion-icon name="thumbs-up"></ion-icon>
-            <div>12 Likes</div>
-          </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button icon-start clear small>
-            <ion-icon name="text"></ion-icon>
-            <div>4 Comments</div>
-          </button>
-        </ion-col>
-        <ion-col align-self-center text-center>
-          <ion-note>
-            11h ago
-          </ion-note>
-        </ion-col>
-      </ion-row> 
-    </ion-card>
-    <ion-card>
+    <div id="item" *ngFor="let item of itemsFiltrado">
+      <ion-card>
         <ion-item>
           <ion-avatar item-start>
             <img src="http://autokadabra.ru/system/uploads/users/18/18340/small.png?1318432918">
-          </ion-avatar>
-          <h2>Marty McFly</h2>
-          <p>November 5, 1955</p>
-        </ion-item>
-      
-        <img src="https://concepto.de/wp-content/uploads/2015/03/paisaje-2-e1549600987975.jpg">
-      
+          </ion-avatar>          
+          <p class="eventoTitulo">{{ item.titulo }}</p>
+          <p class="eventoNick">{{usuarioPerfil.nick }}</p> 
+        </ion-item>      
         <ion-card-content>
-          <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+          <p>{{ item.descripcion }}</p>
         </ion-card-content>
       
         <ion-row>
@@ -111,40 +74,6 @@
           </ion-col>
         </ion-row> 
       </ion-card>
-      <ion-card>
-          <ion-item>
-            <ion-avatar item-start>
-              <img src="http://autokadabra.ru/system/uploads/users/18/18340/small.png?1318432918">
-            </ion-avatar>
-            <h2>Marty McFly</h2>
-            <p>November 5, 1955</p>
-          </ion-item>
-        
-          <img src="https://concepto.de/wp-content/uploads/2015/03/paisaje-2-e1549600987975.jpg">
-        
-          <ion-card-content>
-            <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
-          </ion-card-content>
-        
-          <ion-row>
-            <ion-col>
-              <button ion-button icon-start clear small>
-                <ion-icon name="thumbs-up"></ion-icon>
-                <div>12 Likes</div>
-              </button>
-            </ion-col>
-            <ion-col>
-              <button ion-button icon-start clear small>
-                <ion-icon name="text"></ion-icon>
-                <div>4 Comments</div>
-              </button>
-            </ion-col>
-            <ion-col align-self-center text-center>
-              <ion-note>
-                11h ago
-              </ion-note>
-            </ion-col>
-          </ion-row> 
-        </ion-card>
+    </div>
   </ion-list>
 </ion-content>
