Perfil propio ya funcionando

--- a/RedSports/src/app/modificar-perfil/modificar-perfil.page.html
+++ b/RedSports/src/app/modificar-perfil/modificar-perfil.page.html
@@ -18,7 +18,7 @@
   <ion-content>
       <div class="user-photo" padding-top>
           <ion-avatar>
-            <img src="http://autokadabra.ru/system/uploads/users/18/18340/small.png?1318432918">
+            <img src="../../assets/avatar/{{usuarioPerfil.avatar}}.png">
           </ion-avatar>
         </div>
         <div class="textUsuario"> <strong>Usuario: </strong>{{ usuarioPerfil.nick }} </div>
