--- a/RedSports/src/app/perfil/perfil.page.scss
+++ b/RedSports/src/app/perfil/perfil.page.scss
@@ -39,3 +39,12 @@
      color:#a7abd6;
      font: italic bold 12px/30px Georgia, serif;
  }
+
+ ion-icon {
+    font-size: 30px
+}
+
+ion-col > button {
+    width: 100%;
+    text-align: center;
+}
