--- a/RedSports/src/app/inicio/inicio.page.html
+++ b/RedSports/src/app/inicio/inicio.page.html
@@ -34,7 +34,7 @@
       
         <ion-row>
           <ion-col>
-            <button ion-button large>
+            <button ion-button large (click)="like(post)">
               <ion-icon name="thumbs-up"></ion-icon>
               <div>{{post.likes}} Likes</div>
             </button>
