cambios vista notificaciones para fit movil

--- a/RedSports/src/app/evento/evento.page.html
+++ b/RedSports/src/app/evento/evento.page.html
@@ -42,8 +42,9 @@
       <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
     </agm-map>
   </div>
-  <ion-button expand='full' color="secondary" block (click)="doPrompt()"  style="margin:10px; width: 46%;float: right;">Invitar</ion-button>
-  <ion-button size="medium" expand='full' (click)="apuntarseEnEvento()" [color]=buttonColor style="margin:10px; width: 46%;">{{ participar }}</ion-button>
-  
+  <div style="display: flex">
+    <ion-button expand='full' color="secondary" block (click)="doPrompt()"  style="margin:10px; width: 46%;float: right;">Invitar</ion-button>
+    <ion-button expand='full' (click)="apuntarseEnEvento()" [color]=buttonColor style="margin:10px; width: 46%;">{{ participar }}</ion-button>
+  </div>
   
 </ion-content>
