Añadido id al crear el evento y meterlo como participante

--- a/RedSports/src/app/crear-evento/crear-evento.page.html
+++ b/RedSports/src/app/crear-evento/crear-evento.page.html
@@ -32,6 +32,6 @@
   </ion-item>
 
   <ion-button expand="full" (click)="addEvent(nombreEvento, descripcionEvento, ubicacionEvento)" 
-      [routerLink]="'/eventos/'">¡Añadir Evento!</ion-button>
+      [routerLink]="'/tabs/eventos/'">¡Añadir Evento!</ion-button>
     
 </ion-content>
