olvido de espaciado

--- a/RedSports/src/app/notificaciones/notificaciones.page.html
+++ b/RedSports/src/app/notificaciones/notificaciones.page.html
@@ -43,7 +43,7 @@
                             <ion-label><strong>{{item2.titulo}} {{item2.time}}</strong></ion-label>
                         </ion-item-divider>
                         <ion-item-divider style="border-bottom:none">
-                            <ion-label>{{item2.texto}}</ion-label>
+                            <ion-label style="white-space: normal;">{{item2.texto}}</ion-label>
                         </ion-item-divider>
                     </ion-item-group>
                 </ion-item>
